# tic-tac-toe

./: .gitignore  README.md  tic-tac-toe.cabal
src/: API.hs  Client.hs  Game.hs  Main.hs  Server.hs  UI.hs
test/: Spec.hs
