name:                 tic-tac-toe
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               imd
maintainer:           olegfafurin1@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game, API, UI
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5,
                       brick,
                       vty,
                       lens,
                       servant-server,
                       servant,
                       random,
                       aeson,
                       http-api-data,
                       text
  default-language:    Haskell2010


executable client
  main-is:              Client.hs
  other-modules:        Game
                        UI
                        API
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        linear,
                        brick,
                        vty,
                        comonad,
                        lens,
                        containers,
                        servant-server,
                        servant-client,
                        servant,
                        random,
                        aeson,
                        http-api-data,
                        text,
                        http-client
  hs-source-dirs:       src
  ghc-options:          -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -main-is Client
  default-language:     Haskell2010


executable server
  main-is:              Server.hs
  other-modules:        Game
                        API
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        linear,
                        brick,
                        vty,
                        comonad,
                        lens,
                        containers,
                        servant-server,
                        random,
                        wai,
                        warp,
                        aeson,
                        mtl,
                        ctrie,
                        http-api-data,
                        text
  hs-source-dirs:       src
  ghc-options:          -Wall -Werror -threaded -threaded -rtsopts -with-rtsopts=-N -main-is Server
  default-language:     Haskell2010

test-suite game-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       Game
  build-depends:
    base,
    hspec,
    QuickCheck        >= 2.12 && < 2.14,
    array,
    containers,
    lens,
    random,
    http-api-data,
    text,
    aeson

--    , server
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -main-is Spec
  default-language:    Haskell2010